home update: Add state scaffold, activity scaffold. add 5 rows to each new scaffold. add globabl menu links.

--- a/Week4/Day13/Day13_HW/adventures/app/views/layouts/application.html.erb
+++ b/Week4/Day13/Day13_HW/adventures/app/views/layouts/application.html.erb
@@ -7,8 +7,12 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
+  	<a href="http://localhost:3000/">Home</a>
+  	<a href="http://localhost:3000/states">States</a>
+	<a href="http://localhost:3000/activities">Activities</a>
+
+
     <%= yield %>
   </body>
 </html>
